--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,108 @@
 body {
   background: blanchedalmond;
+  max-width: 50%;
 }
+.container
+{
+  border: 1px solid black;
+  height:15em;
+  width:10em;
+  background-color: rgb(226, 235, 235);
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+  margin: 15px;
+  margin-top:50px;
+}
+.a
+{
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 1px;
+    margin: 8px;
+    padding-bottom: 5px;
+    /*margin-top: 50px;*/
+}
+.b
+{
+  background-color: rgb(229, 235, 235);
+  border: 1px solid rgb(111, 114, 107);
+  height: 50%;
+    padding-top: 3em;
+    text-align: center;
+    margin: 8px;
+    
+  }
+  .c
+  {
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 1px;
+    margin: 8px;
+    
+  }
+  .container1
+  {
+    border: 1px solid black;
+    height: 15em;
+    width: 15em;
+    background-color: rgb(226, 235, 235);
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+    margin: 15px;
+    margin-left: 25em;
+    margin-top: -35%;
+}
+.a1
+{
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 1px;
+    margin: 8px;
+    padding-bottom: 5px;
+    /*margin-top: 50px;*/
+}
+.b1
+{
+  background-color: rgb(229, 235, 235);
+    border: 1px solid rgb(111, 114, 107);
+    height: 50%;
+    padding-top: 3em;
+    text-align: center;
+    margin: 8px;
+    width: 9em;
+    
+  }
+  .c1
+  {
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 50px;
+    margin: 8px;
+    display: flex;
+    flex-direction: column;
+    height: 5.5em;
+    width: 3.5em;
+    
+  }
+  .div1
+{
+  background-color: rgb(229, 235, 235);
+    border: 1px solid rgb(111, 114, 107);
+    height: 75%;
+    width: 14.5em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+    flex-wrap: wrap;
+    
+}
+    
+  
+  
