--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,105 @@
 body {
   background: papayawhip;
+  max-width: 50%;
+}
+.container
+{
+  border: 1px solid black;
+  height:25em;
+  width:10em;
+  background-color: rgb(226, 235, 235);
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+  margin: 15px;
+  margin-top:50px;
+}
+.a
+{
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 1px;
+    margin: 8px;
+    padding-bottom: 5px;
+    /*margin-top: 50px;*/
+}
+.b
+{
+  background-color: rgb(229, 235, 235);
+  border: 1px solid rgb(111, 114, 107);
+  height: 50%;
+    padding-top: 3em;
+    text-align: center;
+    margin: 8px;
+    
+  }
+  .container1
+  {
+    border: 1px solid black;
+    background-color: rgb(226, 235, 235);
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+    margin: 15px;
+    /* flex-wrap: wrap; */
+    /* align-content: space-between; */
+}
+
+  .c
+  {
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 1px;
+    margin: 8px;
+    
+  }
+  
+.d
+{
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 1px;
+    margin: 8px;
+    padding-bottom: 5px;
+   
+}
+.e
+{
+  background-color: rgb(229, 235, 235);
+    border: 1px solid rgb(111, 114, 107);
+   /* height: 50%;
+    padding-top: 3em;*/
+    text-align: center;
+    margin: 8px;
+   /* width: 9em;*/
+    
+  }
+  .f
+  {
+    background-color: rgb(229, 235, 235);
+    border: 1px solid black;
+    text-align: center;
+    padding-top: 50px;
+    margin: 8px;
+    display: flex;
+    flex-direction: column;
+    height: 5.5em;
+    width: 3.5em;
+    
+  }
+  .div1
+{
+  background-color: rgb(229, 235, 235);
+    border: 1px solid rgb(111, 114, 107);
+    height: 75%;
+    width: 14.5em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+    flex-wrap: wrap;
+    
 }
